# fast-search-for-tlsh

./: LICENSE  Makefile  paper.tex  style.toml
paper-dependencies/data-visualization-dependencies/: python-benchmark-data.txt
paper-dependencies/data-visualization-dependencies/rust-bench/srcfile_corpus1010412_query101041_percent8_cutoff30/linear_scan/: report.csv
paper-dependencies/data-visualization-dependencies/rust-bench/srcfile_corpus1010412_query101041_percent8_cutoff30/trie/: report.csv
paper-dependencies/data-visualization-dependencies/rust-bench/srcfile_corpus1010412_query101041_percent8_cutoff30/unwise_vp_tree/: report.csv
paper-dependencies/data-visualization-dependencies/rust-bench/srcfile_corpus1010412_query101041_percent8_cutoff30/unwise_vp_tree_original/: report.csv
paper-dependencies/latex-dependencies/: bibliography.bib
proof/: README.md  TlshProof.lean  lake-manifest.json  lakefile.toml
source-code/data-visualization/: Makefile  data_visualization_infrastructure.py  plot_consolidated_bar_charts.py  plot_line_plots_both.py  plot_python_library_performance.py  requirements.txt
source-code/libraries/python/: Makefile  fast_tlsh.py  requirements.txt  test_fast_tlsh.py
source-code/libraries/rust/: Cargo.toml  README.md
source-code/libraries/rust/benches/: benchmarks.rs
source-code/libraries/rust/src/: common.rs  feature_reordering_trie.rs  lib.rs  linear_scan.rs  unwise_vantage_point_tree.rs  vantage_point_tree.rs
source-code/libraries/rust/tests/: integration_test.rs
(+3576 files in other folders)
